src/objects/BT_CO_CMIS_POP_NumberOfVendorInserts__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numberOfInserts__c</fullName>
        <label>numberOfInserts</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationCode__c</fullName>
        <label>publicationCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationIssueDate__c</fullName>
        <label>publicationIssueDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorGroup__c</fullName>
        <label>vendorGroup</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorNumber__c</fullName>
        <label>vendorNumber</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_CMIS_POP_NumberOfVendorInserts</label>
    <nameField>
        <label>BT_CO_CMIS_POP_NumberOfVendorInserts</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_CMIS_POP_NumberOfVendorInserts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>